# oxt

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/src/: agent.rs  create.rs  docx.rs  edit.rs  google.rs  ir.rs  legacy.rs  lib.rs  main.rs  odf.rs  opc.rs  pptx.rs  roundtrip.rs  xlsx.rs
backend/src/google-pages/: auth-error.html  auth-success.html
frontend/: Cargo.toml
frontend/src/: main.rs
