[package]
name = "oxt-backend"
version = "0.1.0"
edition = "2021"
description = "oxt — motor minimalista para documentos de oficina"
license = "MIT OR Apache-2.0"

[[bin]]
name = "oxt"
path = "src/main.rs"

[dependencies]
zip = "2"
quick-xml = "0.37"
cfb = "0.10"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
base64 = "0.22"
